# first-project

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Makefile  data_faker.py  diesel.toml  docker-compose.yaml  localhost.session.sql
database/: Cargo.toml  migrate.rs
database/migrations/2023-03-23-023148_author/: up.sql
database/migrations/2023-03-23-025118_post/: up.sql
database/migrations/2023-03-23-030733_author_post/: down.sql  up.sql
database/src/: author.rs  dao.rs  db.rs  lib.rs  models.rs  posts.rs  schema.rs  traits.rs
migrations/2023-03-23-025118_post/: up.sql
protos/: author_api.proto  post_api.proto
server/: Cargo.toml  build.rs
server/proto/: author_api.proto  post_api.proto
server/src/: author.rs  post.rs  server.rs  traits.rs
src/: main.rs
