[package]
name = "first-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.3.0"
prost = "0.11.5"
tokio = { version = "1.23.0", features = ["full"] }
tonic-reflection = "0.6.0"
tonic = "0.8.3"
diesel_migrations = "2.0.0"
diesel = { version = "2.0.0", features = ["postgres", "chrono"] }
dotenvy = "0.15"
database = { path = "./database" }

[build-dependencies]
prost-build = "0.11.5"
tonic-build = "0.8.4"
walkdir = "2.3.2"
diesel_migrations = "2.0.0"
diesel = { version = "2.0.0", features = ["postgres", "chrono"] }