[package]
name = "first-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
lazy_static = "1.4.0"
diesel = { version = "2.0.0", features = ["postgres", "chrono"] }
database = { path = "./database" }
server = { path = "./server" }
tonic = "0.9.1"
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
opentelemetry = "0.19.0"

[build-dependencies]
diesel = { version = "2.0.0", features = ["postgres"] }
rand = "0.8"