[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.0.0", features = ["postgres", "chrono"] }
dotenvy = "0.15"
backoff = "0.4.0"
diesel_migrations = "2.0.0"
is_empty = "0.2.0"
chrono = { version = "0.4.24", features = ["serde"] }
fake = { version = "2.5", features = ["chrono"] }
glob = "0.3.1"
lazy_static = "1.4.0"
once_cell = "1.17.1"
itertools = "0.10.5"
rand = "0.8.5"
async-trait = "0.1.68"
bb8 = "0.8.0"
deadpool-diesel = { version = "0.4.1", features = ["postgres"] }
diesel-async = { version = "0.2.1", features = ["postgres", "deadpool"] }

[build-dependencies]
backoff = "0.4.0"
fake = { version = "2.5", features = ["chrono"] }
glob = "0.3.1"
diesel_migrations = "2.0.0"
diesel = { version = "2.0.0", features = ["postgres"] }

[[bin]]
name = "migrate"
path = "migrate.rs"

[lib]
path = "./src/traits.rs"